--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -28,9 +28,9 @@ $bodoni                     : "Bodoni MT", serif;
 $calisto                    : "Calisto MT", serif;
 $garamond                   : Garamond, serif;
 
-$global-font-family         : $sans-serif;
-$header-font-family         : $sans-serif;
-$caption-font-family        : $serif;
+$global-font-family         : $helvetica;
+$header-font-family         : $helvetica;
+$caption-font-family        : $helvetica;
 
 /* type scale */
 $type-size-1                : 2.441em;  // ~39.056px
@@ -57,7 +57,7 @@ $body-color                 : #fff;
 $background-color           : #242526;
 $code-background-color      : #fafafa;
 $code-background-color-dark : $light-gray;
-$text-color                 : #fff;
+$text-color                 : #ff0000;
 $border-color               : $lighter-gray;
 
 $primary-color              : #7a8288;
