--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -57,7 +57,7 @@ $body-color                 : #fff;
 $background-color           : #242526;
 $code-background-color      : #fafafa;
 $code-background-color-dark : $light-gray;
-$text-color                 : #fff;
+$text-color                 : #E4E6EB;
 $border-color               : $lighter-gray;
 
 $primary-color              : #7a8288;
