--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -28,9 +28,9 @@ $bodoni                     : "Bodoni MT", serif;
 $calisto                    : "Calisto MT", serif;
 $garamond                   : Garamond, serif;
 
-$global-font-family         : "Roboto";
-$header-font-family         : "Roboto";
-$caption-font-family        : "Roboto";
+$global-font-family         : "San Francisco";
+$header-font-family         : "San Francisco";
+$caption-font-family        : "San Francisco";
 
 /* type scale */
 $type-size-1                : 2.441em;  // ~39.056px
