--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -21,7 +21,7 @@
   -webkit-animation-delay: 0.45s;
           animation-delay: 0.45s;
   background-color: #e4e5e6;
-  border-top: 1px solid $light-gray;
+  border-top: 1px solid $darker-gray;
 
   footer {
     @include clearfix;
@@ -29,7 +29,7 @@
     margin-right: auto;
     margin-top: 1em;
     max-width: 100%;
-    padding: 0 1em 2em;
+    padding: 0 1em 0;
 
     @include breakpoint($x-large) {
       max-width: $x-large;
