--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -12,7 +12,7 @@
   /* sticky footer fix start */
   position: absolute;
   bottom: 0em;
-  height: auto;
+  height: 0em;
   /* sticky footer fix end */
   margin-top: 1em;
   color: mix(#fff, $gray, 25%);
@@ -27,7 +27,7 @@
     @include clearfix;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 1em;
+    margin-top: 0em;
     max-width: 100%;
     padding: 0 1em 0;
 
