--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -20,14 +20,14 @@
           animation: intro 0.3s both;
   -webkit-animation-delay: 0.45s;
           animation-delay: 0.45s;
-  background-color: #e4e5e6;
+  background-color: $darker-gray;
   border-top: 1px solid $darker-gray;
 
   footer {
     @include clearfix;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 0em;
+    margin-top: 0.5m;
     max-width: 100%;
     padding: 0 1em 0;
 
